@@ -1,18 +1,19 @@
 package com.ebsolutions.dal.daos;
 
-import com.ebsolutions.config.DatabaseTables;
+import com.ebsolutions.config.DatabaseConstants;
 import com.ebsolutions.dal.dtos.OrganizerDto;
+import com.ebsolutions.dal.utils.KeyBuilder;
 import com.ebsolutions.exceptions.DataProcessingException;
 import com.ebsolutions.models.MetricsStopWatch;
 import com.ebsolutions.models.Organizer;
 import com.ebsolutions.utils.UniqueIdGenerator;
 import io.micronaut.context.annotation.Prototype;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbEnhancedClient;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbTable;
 import software.amazon.awssdk.enhanced.dynamodb.Key;
 import software.amazon.awssdk.enhanced.dynamodb.TableSchema;
-import software.amazon.awssdk.enhanced.dynamodb.model.QueryConditional;
 import software.amazon.awssdk.services.dynamodb.model.DynamoDbException;
 
 import java.text.MessageFormat;
@@ -20,28 +21,30 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static software.amazon.awssdk.enhanced.dynamodb.model.QueryConditional.sortBeginsWith;
+
 @Slf4j
 @Prototype
 public class OrganizerDao {
 
-    private final DynamoDbTable<OrganizerDto> organizerTable;
+    private final DynamoDbTable<OrganizerDto> ddbTable;
 
     public OrganizerDao(DynamoDbEnhancedClient enhancedClient) {
-        this.organizerTable = enhancedClient.table(DatabaseTables.ORGANIZER, TableSchema.fromBean(OrganizerDto.class));
+        this.ddbTable = enhancedClient.table(DatabaseConstants.DATABASE_TABLE_NAME, TableSchema.fromBean(OrganizerDto.class));
     }
 
     public Organizer read(String clientId, String organizerId) {
         MetricsStopWatch metricsStopWatch = new MetricsStopWatch();
         try {
-            Key key = Key.builder().partitionValue(clientId).sortValue(organizerId).build();
+            Key key = KeyBuilder.build(clientId, DatabaseConstants.ORGANIZER_SORT_KEY, organizerId);
 
-            OrganizerDto organizerDto = organizerTable.getItem(key);
+            OrganizerDto organizerDto = ddbTable.getItem(key);
 
             return organizerDto == null
                     ? null
                     : Organizer.builder()
-                    .clientId(organizerDto.getClientId())
-                    .organizerId(organizerDto.getOrganizerId())
+                    .clientId(organizerDto.getPartitionKey())
+                    .organizerId(StringUtils.remove(organizerDto.getSortKey(), DatabaseConstants.ORGANIZER_SORT_KEY))
                     .name(organizerDto.getName())
                     .createdOn(organizerDto.getCreatedOn())
                     .lastUpdatedOn(organizerDto.getLastUpdatedOn())
@@ -60,15 +63,20 @@ public class OrganizerDao {
     public List<Organizer> readAll(String clientId) {
         MetricsStopWatch metricsStopWatch = new MetricsStopWatch();
         try {
-            Key key = Key.builder().partitionValue(clientId).build();
-            QueryConditional queryConditional = QueryConditional.keyEqualTo(key);
-            List<OrganizerDto> organizerDtos = organizerTable.query(queryConditional).items().stream().toList();
+            List<OrganizerDto> organizerDtos = ddbTable
+                    .query(r -> r.queryConditional(
+                            sortBeginsWith(s
+                                    -> s.partitionValue(clientId).sortValue(DatabaseConstants.ORGANIZER_SORT_KEY).build()))
+                    )
+                    .items()
+                    .stream()
+                    .collect(Collectors.toList());
 
             return organizerDtos.stream()
                     .map(organizerDto ->
                             Organizer.builder()
-                                    .clientId(organizerDto.getClientId())
-                                    .organizerId(organizerDto.getOrganizerId())
+                                    .clientId(organizerDto.getPartitionKey())
+                                    .organizerId(StringUtils.remove(organizerDto.getSortKey(), DatabaseConstants.ORGANIZER_SORT_KEY))
                                     .name(organizerDto.getName())
                                     .createdOn(organizerDto.getCreatedOn())
                                     .lastUpdatedOn(organizerDto.getLastUpdatedOn())
@@ -88,11 +96,12 @@ public class OrganizerDao {
 
     public void delete(String clientId, String organizerId) {
         MetricsStopWatch metricsStopWatch = new MetricsStopWatch();
-       
-        try {
-            Key key = Key.builder().partitionValue(clientId).sortValue(organizerId).build();
 
-            organizerTable.deleteItem(key);
+        try {
+            Key key = KeyBuilder.build(clientId, DatabaseConstants.ORGANIZER_SORT_KEY, organizerId);
+
+
+            ddbTable.deleteItem(key);
 
         } catch (DynamoDbException dbe) {
             log.error("ERROR::{}", this.getClass().getName(), dbe);
@@ -107,23 +116,23 @@ public class OrganizerDao {
 
     public Organizer create(Organizer organizer) {
         MetricsStopWatch metricsStopWatch = new MetricsStopWatch();
-       
+
         try {
             LocalDateTime now = LocalDateTime.now();
             OrganizerDto organizerDto = OrganizerDto.builder()
-                    .clientId(organizer.getClientId())
-                    .organizerId(UniqueIdGenerator.generate())
+                    .partitionKey(organizer.getClientId())
+                    .sortKey(DatabaseConstants.ORGANIZER_SORT_KEY + UniqueIdGenerator.generate())
                     .name(organizer.getName())
                     .createdOn(now)
                     .lastUpdatedOn(now)
                     .build();
 
-            organizerTable.updateItem(organizerDto);
+            ddbTable.updateItem(organizerDto);
 
             return Organizer.builder()
-                    .clientId(organizerDto.getClientId())
-                    .organizerId(organizerDto.getOrganizerId())
-                    .name(organizerDto.getName())
+                    .clientId(organizerDto.getPartitionKey())
+                    .organizerId(organizerDto.getSortKey())
+                    .organizerId(StringUtils.remove(organizerDto.getSortKey(), DatabaseConstants.ORGANIZER_SORT_KEY))
                     .createdOn(organizerDto.getCreatedOn())
                     .lastUpdatedOn(organizerDto.getLastUpdatedOn())
                     .build();
@@ -145,17 +154,17 @@ public class OrganizerDao {
      */
     public void update(Organizer organizer) {
         MetricsStopWatch metricsStopWatch = new MetricsStopWatch();
-       
+
         try {
             OrganizerDto organizerDto = OrganizerDto.builder()
-                    .clientId(organizer.getClientId())
-                    .organizerId(organizer.getOrganizerId())
+                    .partitionKey(organizer.getClientId())
+                    .sortKey(DatabaseConstants.ORGANIZER_SORT_KEY + organizer.getOrganizerId())
                     .name(organizer.getName())
                     .createdOn(organizer.getCreatedOn())
                     .lastUpdatedOn(LocalDateTime.now())
                     .build();
 
-            organizerTable.putItem(organizerDto);
+            ddbTable.putItem(organizerDto);
 
         } catch (DynamoDbException dbe) {
             log.error("ERROR::{}", this.getClass().getName(), dbe);
